--- a/_angular-app/package.json
+++ b/_angular-app/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.1.7",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "hoek": "^5.0.4",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
     "rxjs": "^6.3.2",
