--- a/_angular-app/package.json
+++ b/_angular-app/package.json
@@ -20,10 +20,17 @@
     "@angular/platform-browser": "^6.1.7",
     "@angular/platform-browser-dynamic": "^6.1.7",
     "@angular/router": "^6.1.7",
+    "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
+    "animate.css": "^3.7.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "hoek": "^5.0.4",
     "jquery": "^3.3.1",
+    "material-design-icons": "^3.0.1",
+    "ngx-pagination": "^3.2.1",
+    "nonblockjs": "^1.0.8",
+    "pace": "github:HubSpot/pace#v1.0.2",
+    "pnotify": "^4.0.0-alpha.4",
     "popper.js": "^1.14.4",
     "rxjs": "^6.3.2",
     "zone.js": "~0.8.26"
@@ -39,7 +46,7 @@
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^2.0.5",
+    "karma": "^3.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-jasmine": "~1.1.1",
